@@ -1,2 +1,2 @@
 # this file is generated by version.py
-SVN_REVISION = 254
+SVN_REVISION = 256
